# SnookXporter

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: cron_synchronize.yml  manual_synchronize.yml  synchronize.yml  tests.yml
settings/: config.py  config.yaml
snookxporter/: __init__.py  __main__.py  dataclasses.py  entities.py  main.py
snookxporter/clients/: snookapp.py
snookxporter/clients/google/: calendar.py  formats.py
snookxporter/settings/: config.py
tests/: test_entities.py  test_main.py
tests/clients/: test_snookapp.py
tests/clients/google/: test_calendar.py
tests/settings/: test_config.py
