[tool.poetry]
name = "snookxporter"
version = "0.1.0"
description = ""
authors = ["sequencer <sequencer.pl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
click = "^8.1.7"
google-api-python-client = "^2.151.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"
pytz = "^2024.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
responses = "^0.25.3"
isort = "^5.13.2"
pylint = "^3.3.1"
freezegun = "^1.5.1"
types-requests = "^2.32.0.20241016"
mypy = "^1.13.0"
types-pyyaml = "^6.0.12.20240917"
parameterized = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
snookxporter = "snookxporter.__main__:run"

[[tool.mypy.overrides]]
module = [
    "google_auth_oauthlib.flow",
    "googleapiclient.discovery",
    "parameterized"
]
ignore_missing_imports = true
