[project]
name = "snookxporter"
version = "0.1.0"
description = "Sync scheduled snooker league matches (from the open SnookApp API) to your Google Calendar"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "google-api-python-client>=2.171.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "freezegun>=1.5.2",
    "isort>=6.0.1",
    "mypy>=1.16.0",
    "parameterized>=0.9.0",
    "pylint>=3.3.7",
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
    "responses>=0.25.7",
    "types-pyyaml>=6.0.12.20250516",
    "types-requests>=2.32.0.20250602",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["snookxporter"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project.scripts]
snookxporter = "snookxporter.__main__:run"

[[tool.mypy.overrides]]
module = [
    "google_auth_oauthlib.flow",
    "googleapiclient.discovery",
    "parameterized"
]
ignore_missing_imports = true
